Use spotless + Google formatting